--- a/threePro.html
+++ b/threePro.html
@@ -101,8 +101,8 @@
     </style>
   </head>
   <body>
-    <script src="JS Files/three.js"></script>
-    <script src="JS Files/OrbitControls.js"></script>
+    <script src="three.js"></script>
+    <script src="OrbitControls.js"></script>
 
     <div id='info'>PERIODIC TABLE</div>
     <div id = 'hydrogen_text'>HYDROGEN
