--- a/threePro.html
+++ b/threePro.html
@@ -146,8 +146,8 @@
 
     <div id = 'boron_text'>BORON
 
-            <ul style="font-size: 23px; text-align: left;"
-              <li>Symbol: BS</li>
+            <ul style="font-size: 23px; text-align: left;">
+              <li>Symbol: B</li>
               <li>Atomic Nummber: 5</li>
               <li>Atomic Mass: 10.821</li>
               <li>Discovered by: joseph Louis Gay-Lussac</li>
